[FEAT] 탐색 카테고리 필터링 , 차단 유저 조회 API 구현